--- a/index.html
+++ b/index.html
@@ -148,6 +148,16 @@
         </div>
     </div>
 
+    <div class="page">
+        <ul class="pagination justify-content-center">
+            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+    </div>
+
     <!-- Contact Us Page -->
     <div id="contact" class="container mt-3 mb-10">
         <h1>Contact Us</h1>
